--- a/src/components/dropDownWithLabel/dropDown.css
+++ b/src/components/dropDownWithLabel/dropDown.css
@@ -1,6 +1,6 @@
 .dropdown {
     position: relative;
-    height: 35px;
+    height: 38px;
     border: 1px solid red;
     cursor: pointer;
 }
@@ -9,7 +9,7 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    top: 25px;
+    top: 30px;
     right: -1px;
     width: 100%;
     background-color: white;
@@ -22,10 +22,6 @@ ul {
 
 li {
     padding-left: 5px;
-}
-
-li:last-child {
-    border-bottom: none;
 }
 
 li:hover {
@@ -49,8 +45,8 @@ li:hover {
     margin-right: -15px;
 }
 
-ul .button:before{
-    /*background-color: #red;*/
+.button{
+    padding-top: 5px;
 }
 
 .svg-border{
